# ngang-app-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  index.ts  package-lock.json  package.json  run.sh  server.js  testcontent.json
assets/: testcontent.json
components/: apiHandler.ts
components/db/: user.ts
src/: main.rs
src/api/: api_handler.rs
